larger background height to ensure background fits on mobile devices

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -79,6 +79,7 @@ body {
   background-size: cover;
   margin: 0;
   width: 100%;
+  height: 200%
 }
 
 /**
